fix spacing and new fail

--- a/static/css/courses.css
+++ b/static/css/courses.css
@@ -36,6 +36,8 @@ div.classes div.terms {
     display: flex;
     margin: 10px;
     padding: 10px;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 /* courses */
